<resources>
    <string name="app_name">ACMobil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ayarlar</string>
    <string name="action_info">Hakkında</string>
    <string name="title_activity_yemek_listesi">YemekListesi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">Info</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--End of related to Login-->

    <!-- Login -->
    <string name="action_sign_in_short">Üye ol</string>
    <string name="email">Email</string>
    <string name="enterEmail">Lütfen geçerli bir mail giriniz.</string>
    <string name="enterPw">Lütfen geçerli bir şifre giriniz.</string>
    <string name="minimum_password">Şifreniz çok kısa. Minimum 6 karakterli şifre giriniz.</string>
    <string name="auth_failed">Giriş başarısız. Lütfen şifre veya mailinizi kontrol ediniz.</string>
    <string name="change_email">Email Değiştir</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="send_password_reset_email">Şifre değişim maili, mail hesabınıza yollandı.</string>
    <string name="remove_user">Üye Sil</string>
    <string name="new_pass">Yeni Şifre</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Giriş Yap</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_name">Tam isim</string>
    <string name="btn_login">Giriş Yap</string>
    <string name="btn_link_to_register">Üye değil misiniz? Gelin üye olalım.</string>
    <string name="btn_link_to_login">Üye oldunuz mu? Gelin giriş yapalım.</string>
    <string name="title_activity_reset_password">Şifre Değiştir</string>
    <string name="btn_forgot_password">Şifremi unuttum</string>
    <string name="btn_reset_password">Şifre değiştir</string>
    <string name="btn_back"><![CDATA[<< Geri]]></string>
    <string name="hint_new_email">Yeni mail</string>
    <string name="btn_change">Değiştir</string>
    <string name="btn_send">Yolla</string>
    <string name="btn_remove">Sil</string>
    <string name="btn_sign_out">Çıkış Yap</string>
    <string name="lbl_forgot_password">Şifremi unuttum</string>
    <string name="forgot_password_msg">Şifrenizi değiştirmek için mail adresinizi giriniz.</string>
    <string name="title_activity_signup">Üye Ol</string>
    <string name="hint_ogrNum">Öğrenci Numarası</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="hint_uyeNum">Üye Numarası</string>
    <string name="push_yemekList">Yemek Listesi</string>
    <string name="push_map">Kampüs Haritası</string>
    <!-- End of Login -->

    <!-- Signup -->
    <string name="ogr_num_not_in_db">Lütfen geçerli bir öğrenci numarası giriniz</string>

    <string-array name="mekanlar_array">
        <item>Kız Öğrenci Yurdu</item>
        <item>Erkek Öğrenci Yurdu</item>
        <item>Parlar Öğrenci Yurdu</item>
        <item>Atatepe Öğrenci Yurdu</item>
        <item>Öğrenci Evleri</item>
        <item>Spor Bilimleri</item>
        <item>Ego Durakları</item>
        <item>Karma Yurt</item>
        <item>City</item>
        <item>Şok</item>
        <item>Beytepe Alışveriş Merkezi(Bam)</item>
        <item>Yabancı Diller Yüksek Okulu(YDYO)</item>
        <item>Yıldız Amfi</item>
        <item>Mehmet Akif Ersoy K-Salonu(MAE)</item>
        <item>Beytepe Kampüsü Rektörlük Binası</item>
        <item>Beytepe Gün Hastanesi</item>
        <item>Beytepe Açık Hava Tiyatrosu</item>
        <item>Edebiyat Fakültesi</item>
        <item>Hukuk Fakültesi</item>
        <item>Güzel Sanatlar Fakültesi</item>
        <item>İktisadi ve İdari Bilimler Fakültesi</item>
        <item>Eğitim Bilimleri Fakültesi</item>
        <item>Fizik-Nükleer Enerji Mühendisliği</item>
        <item>Elektrik Elektronik Mühendisliği</item>
        <item>Bilgisayar Mühendisliği</item>
        <item>Çevre Mühendisliği</item>
        <item>Jeoloji Mühendisliği</item>
        <item>Kimya Mühendisliği</item>
        <item>Makine Mühendisliği</item>
        <item>Otomotiv Mühendisliği</item>
        <item>Gıda Mühendisliği</item>
        <item>Bilgi İşlem</item>
        <item>Kütüphane</item>
        <item>Atmler</item>
        <item>Ptt</item>
        <item>Matematik Bölümü</item>
        <item>Biyoloji Bölümü</item>
        <item>Geomatik Mühendislik Bölümü</item>
        <item>Yeşil Vadi</item>
        <item>Halı Saha</item>
        <item>Güneş Saatleri Parkı</item>
        <item>Beytepe Stadı</item>
        <item>Beytepe Anaokulu</item>
        <item>Hacettepe Teknokent</item>
        <item>Kongre Merkezi</item>
        <item>Olimpik Yüzme Havuzu</item>
        <item>Yemekhaneler</item>
        <item>Nizamiye</item>
        <item>Yapı Kredi Bankası</item>
        <item>Vakıfbank</item>
        <item>Nacho</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
